--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./Lib/swiper8/swiper-bundle.min.css" />
     <script defer src="./main.js"></script>
-    <title>Главная</title>
+    <title>Наш блог</title>
   </head>
   <body>
     <div class="wrapper">
@@ -21,14 +21,13 @@
               <li class="info_3">Покупателям</li>
               <li class="info_4">Поставщикам</li>
               <li>Контакты</li>
-
               <button class="download_btn">
                 <a href="#">Скачать прайс</a>
               </button>
             </ul>
             <ul class="contacts">
-              <li>+7 800 700-80-89</li>
-              <li class="contacts_2">+7 8552 39-35-06</li>
+              <li>8 800 700-80-89</li>
+              <li class="contacts_2">8 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
@@ -117,137 +116,107 @@
       </div>
 
       <!-- Контент -->
-
       <div class="content">
-        <div class="contacts_container">
-          <h1 class="contacts_title">Контакты</h1>
-          <div class="contacts_section">
-            <div class="item1">
-              <div class="item1_text">
-                <h5>Адрес</h5>
-                <p>
-                  423800 , РФ, Татарстан г.Набережные Челны, Индустриальный
-                  проезд, д.6
-                </p>
-                <p>Наш офис имеет удобный подъезд с федеральной трассы М7.</p>
+        <div class="content_wrapper">
+          <h1 class="title blog_title">Наш блог</h1>
+          <div class="blog-video-section">
+            <div class="grid_video_item">
+              <div class="video_blog_item">
+                <a href="#" class="watch_btn"
+                  >Смотреть <img src="./assets/video-arrow.svg" alt=""
+                /></a>
+                <video
+                  src="./assets/videoTe.mp4"
+                  autoplay
+                  muted
+                  playsinline
+                ></video>
+              </div>
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
               </div>
             </div>
-            <div class="item2">
-              <div class="item2_text">
-                <h5>Контакты</h5>
-                <div class="phones">
-                  <div class="phone">
-                    <h5>Телефоны</h5>
-                    <ul>
-                      <li>+7 800 700-80-89</li>
-                      <li>+7 8552 39-35-06</li>
-                    </ul>
-                  </div>
-                  <div class="email">
-                    <h5>Адрес электронной почты</h5>
-                    <p>info@mig-auto.ru</p>
-                  </div>
-                </div>
+
+            <div class="grid_video_item">
+              <div class="video_blog_item">
+                <a href="#" class="watch_btn"
+                  >Смотреть <img src="./assets/video-arrow.svg" alt=""
+                /></a>
+                <video
+                  src="./assets/videoTe.mp4"
+                  autoplay
+                  muted
+                  playsinline
+                ></video>
+              </div>
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
               </div>
             </div>
           </div>
-          <h5 class="bills">Наши реквизиты</h5>
-          <div class="map_section">
-            <img src="./assets/map.png" alt="" />
-          </div>
-        </div>
+          <button id="showCersBtn" class="expand_button butn">
+            Показать еще
+          </button>
 
-        <div class="people">
-          <h3>Наши эксперты</h3>
-          <div class="people_cards">
-            <div class="people_card">
-              <img src="./assets/p1.png" alt="" />
-
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
+          <div class="blogs">
+            <div class="blogs_item">
+              <img src="./assets/blog1.png" alt="" />
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
+              </div>
             </div>
-            <div class="people_card">
-              <img src="./assets/p2.png" alt="" />
 
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
+            <div class="blogs_item">
+              <img src="./assets/blog1.png" alt="" />
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
+              </div>
             </div>
-            <div class="people_card">
-              <img src="./assets/p3.png" alt="" />
 
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
+            <div class="blogs_item">
+              <img src="./assets/blog4.png" alt="" />
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
+              </div>
             </div>
-            <div class="people_card">
-              <img src="./assets/p4.png" alt="" />
 
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
+            <div class="blogs_item">
+              <img src="./assets/blog1.png" alt="" />
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
+              </div>
+            </div>
+
+            <div class="blogs_item">
+              <img src="./assets/img/download.jpeg" alt="" />
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
+              </div>
+            </div>
+
+            <div class="blogs_item">
+              <img
+                src="./assets/img/wallpaperflare.com_wallpaper (10).jpg"
+                alt=""
+              />
+              <div class="blog_video_desc">
+                <h5 class="title">Ремонт двигателя КамАЗ</h5>
+                <p>2 марта 2017</p>
+              </div>
             </div>
           </div>
-          <button class="people_btn">
-            <a>Смотреть всех</a>
-            <img src="./assets/arrow.svg" alt="" />
+          <button id="showCersBtn" class="expand_button butn blog_expand">
+            Показать еще
           </button>
         </div>
       </div>
-
       <!-- Контент -->
 
       <div class="footer">
