--- a/blogItem.html
+++ b/blogItem.html
@@ -21,14 +21,13 @@
               <li class="info_3">Покупателям</li>
               <li class="info_4">Поставщикам</li>
               <li>Контакты</li>
-
               <button class="download_btn">
                 <a href="#">Скачать прайс</a>
               </button>
             </ul>
             <ul class="contacts">
-              <li>+7 800 700-80-89</li>
-              <li class="contacts_2">+7 8552 39-35-06</li>
+              <li>8 800 700-80-89</li>
+              <li class="contacts_2">8 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
@@ -117,137 +116,119 @@
       </div>
 
       <!-- Контент -->
-
       <div class="content">
-        <div class="contacts_container">
-          <h1 class="contacts_title">Контакты</h1>
-          <div class="contacts_section">
-            <div class="item1">
-              <div class="item1_text">
-                <h5>Адрес</h5>
-                <p>
-                  423800 , РФ, Татарстан г.Набережные Челны, Индустриальный
-                  проезд, д.6
-                </p>
-                <p>Наш офис имеет удобный подъезд с федеральной трассы М7.</p>
-              </div>
+        <div class="blog_item_title">
+          <img src="./assets/img/blog-item-main-pic.png" alt="" />
+          <div>
+            <h1 class="title">Ремонт двигателя КамАЗ</h1>
+            <p>2 марта 2017</p>
+            <p><img src="./assets/eye.svg" alt="" />1346 чел</p>
+          </div>
+        </div>
+        <div class="breadcumb">
+          <a href="#">Главная</a><img src="./assets/arrow.svg" alt="" /><a
+            href="#"
+            >Наш блог</a
+          ><img src="./assets/arrow.svg" alt="" /><a
+            href="#"
+            class="active_breadcrumb"
+            >Ремонт двигателя КамАЗ</a
+          >
+        </div>
+
+        <div class="blog_item_text">
+          <p>
+            Инновации в автомобильной индустрии не перестают удивлять нас своими
+            новейшими технологиями, и теперь на свет появился долгожданный
+            прорыв! Ученые из мирового автоконцерна "ГринТех" представили новый
+            революционный эко-двигатель, который обещает изменить мир
+            автомобилестроения и сделать наши дороги более чистыми и
+            безопасными. <br />
+            Основной задачей команды инженеров "ГринТех" было создание мотора,
+            который не только обеспечивал бы высокую производительность, но и
+            значительно снижал бы выбросы вредных веществ в окружающую среду. И
+            вот, спустя несколько лет разработок и тестирования, они представили
+            свою работу миру - уникальный эко-двигатель, работающий на основе
+            совершенно новой принципиально иной технологии. Основным отличием
+            нового двигателя от существующих традиционных моделей является
+            использование прогрессивного водородно-кислородного топливного
+            элемента, который обеспечивает более эффективное сжигание и
+            практически полный разлет воды в окружающей среде, вместо
+            углекислого газа и других вредных выбросов.<br />
+            Согласно предварительным тестам, проведенным независимыми
+            экспертами, новый эко-двигатель обеспечивает удивительную экономию
+            топлива, что приводит к снижению затрат владельцев автомобилей на
+            его заправку. Более того, этот двигатель демонстрирует значительное
+            увеличение мощности и скорости, что делает его привлекательным
+            выбором для автолюбителей.
+          </p>
+        </div>
+
+        <div class="blog-video-section">
+          <div class="grid_video_item">
+            <div class="video_blog_item blog_page_video_tile">
+              <a href="#" class="watch_btn"
+                >Смотреть <img src="./assets/video-arrow.svg" alt=""
+              /></a>
+              <video
+                src="./assets/videoTe.mp4"
+                autoplay
+                muted
+                playsinline
+              ></video>
             </div>
-            <div class="item2">
-              <div class="item2_text">
-                <h5>Контакты</h5>
-                <div class="phones">
-                  <div class="phone">
-                    <h5>Телефоны</h5>
-                    <ul>
-                      <li>+7 800 700-80-89</li>
-                      <li>+7 8552 39-35-06</li>
-                    </ul>
-                  </div>
-                  <div class="email">
-                    <h5>Адрес электронной почты</h5>
-                    <p>info@mig-auto.ru</p>
-                  </div>
-                </div>
-              </div>
+            <div class="blog_video_desc">
+              <h5 class="title">Ремонт двигателя КамАЗ</h5>
+              <p>Краткое описание, если есть</p>
             </div>
           </div>
-          <h5 class="bills">Наши реквизиты</h5>
-          <div class="map_section">
-            <img src="./assets/map.png" alt="" />
+
+          <div class="grid_video_item">
+            <div class="video_blog_item blog_page_video_tile">
+              <a href="#" class="watch_btn"
+                >Смотреть <img src="./assets/video-arrow.svg" alt=""
+              /></a>
+              <video
+                src="./assets/videoTe.mp4"
+                autoplay
+                muted
+                playsinline
+              ></video>
+            </div>
+            <div class="blog_video_desc">
+              <h5 class="title">Ремонт двигателя КамАЗ</h5>
+              <p>Краткое описание, если есть</p>
+            </div>
           </div>
         </div>
 
-        <div class="people">
-          <h3>Наши эксперты</h3>
-          <div class="people_cards">
-            <div class="people_card">
-              <img src="./assets/p1.png" alt="" />
+        <div class="blog_item_text">
+          <p>
+            Инновации в автомобильной индустрии не перестают удивлять нас своими
+            новейшими технологиями, и теперь на свет появился долгожданный
+            прорыв! Ученые из мирового автоконцерна "ГринТех" представили новый
+            революционный эко-двигатель, который обещает изменить мир
+            автомобилестроения и сделать наши дороги более чистыми и
+            безопасными. Основной задачей команды инженеров "ГринТех" было
+            создание мотора, который не только обеспечивал бы высокую
+            производительность, но и значительно снижал бы выбросы вредных
+            веществ в окружающую среду. И вот, спустя несколько лет разработок и
+            тестирования, они представили свою работу миру - уникальный
+            эко-двигатель,
+          </p>
+        </div>
 
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
-            </div>
-            <div class="people_card">
-              <img src="./assets/p2.png" alt="" />
-
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
-            </div>
-            <div class="people_card">
-              <img src="./assets/p3.png" alt="" />
-
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
-            </div>
-            <div class="people_card">
-              <img src="./assets/p4.png" alt="" />
-
-              <ul>
-                <h5>Сергей Сухорученко</h5>
-                <li>
-                  <img
-                    src="./assets/tabler_mail-filled.svg"
-                    alt=""
-                  />sergey@mig-auto.com
-                </li>
-                <li>
-                  <img src="./assets/ic_baseline-phone.svg" alt="" />zega5555
-                </li>
-                <li>
-                  <img src="./assets/skype.svg" alt="" />+7 (8552) 39-35-06
-                  (доб. 444)
-                </li>
-              </ul>
-            </div>
-          </div>
-          <button class="people_btn">
-            <a>Смотреть всех</a>
-            <img src="./assets/arrow.svg" alt="" />
-          </button>
+        <div class="full_video">
+          <a href="#" class="watch_btn"
+            >Смотреть <img src="./assets/video-arrow.svg" alt=""
+          /></a>
+          <video src="./assets/videoTe.mp4" autoplay muted playsinline></video>
+        </div>
+        <div class="blog_video_desc_full">
+          <h5 class="title">Ремонт двигателя КамАЗ</h5>
+          <p>Краткое описание, если есть</p>
         </div>
       </div>
-
       <!-- Контент -->
 
       <div class="footer">
