blogs pages videos title

--- a/blogItem.html
+++ b/blogItem.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./Lib/swiper8/swiper-bundle.min.css" />
     <script defer src="./main.js"></script>
-    <title>Главная</title>
+    <title>Страница блога</title>
   </head>
   <body>
     <div class="wrapper">
