--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </div>
             <div class="swiper-slide">
               <div class="slider_background">
-                <img class="slide" src="./assets/img/download.jpeg" alt="" />
+                <img class="slide" src="./assets/баннер.png" alt="" />
               </div>
             </div>
             <div class="swiper-slide">
