--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 alt=""
               />
               <div class="img_sales_container">
-                <img src="./assets/img/download.jpeg" alt="" />
+                <img src="./assets/img/engine.png" alt="" />
               </div>
               <p>Запчасти и ремонт Deutz 1015 серия</p>
               <h6 class="price title">400 000 ₽</h6>
@@ -376,10 +376,10 @@
         <div class="advantages">
           <div class="tiles">
             <div class="tiles_row_1">
-              <div class="tile_1 tile">
+              <div class="tile_4 tile">
                 <div>
-                  <h1>C 1998 года</h1>
-                  <p>Поставляем запчасти для грузовых авто</p>
+                  <h1>Стабильно <span>низкие</span> цены</h1>
+                  <p>при высоком качестве</p>
                 </div>
               </div>
 
@@ -389,8 +389,30 @@
                   <p>за счет больших объемов складских запасов</p>
                 </div>
               </div>
+
+              <!-- <div class="tile_2 tile">
+                <div>
+                  <h1>Быстрая доставка</h1>
+                  <p>за счет больших объемов складских запасов</p>
+                </div>
+              </div> -->
             </div>
             <div class="tiles_row_2">
+              <div class="tile_1 tile">
+                <div>
+                  <h1>C 1998 года</h1>
+                  <p>Поставляем запчасти для грузовых авто</p>
+                </div>
+              </div>
+
+              <div class="tile_3 tile">
+                <div>
+                  <h1>Оригинальные запчасти</h1>
+                </div>
+              </div>
+            </div>
+
+            <!-- <div class="tiles_row_2">
               <div class="tile_3 tile">
                 <div>
                   <h1>Оригинальные запчасти</h1>
@@ -403,7 +425,7 @@
                   <p>при высоком качестве</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <!-- преимущества -->
