--- a/index.html
+++ b/index.html
@@ -151,7 +151,24 @@
             </div>
             <div class="swiper-slide">
               <div class="slider_background">
-                <img class="slide" src="./assets/баннер.png" alt="" />
+                <img
+                  class="slide banner_back"
+                  src="./assets/img/banner-back.png"
+                  alt=""
+                />
+
+                <img
+                  src="./assets/img/banner-text-group.png"
+                  alt=""
+                  class="banner_img2"
+                />
+
+                <img
+                  src="./assets/img/pedal_banner.png"
+                  alt=""
+                  class="banner_img3"
+                />
+                <button class="slider_btn butn">Смотреть</button>
               </div>
             </div>
             <div class="swiper-slide">
