--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./Lib/swiper8/swiper-bundle.min.css" />
     <script defer src="./main.js"></script>
-    <title>Главная</title>
+    <title>Контакты</title>
   </head>
   <body>
     <div class="wrapper">
@@ -21,14 +21,13 @@
               <li class="info_3">Покупателям</li>
               <li class="info_4">Поставщикам</li>
               <li>Контакты</li>
-
               <button class="download_btn">
                 <a href="#">Скачать прайс</a>
               </button>
             </ul>
             <ul class="contacts">
-              <li>+7 800 700-80-89</li>
-              <li class="contacts_2">+7 8552 39-35-06</li>
+              <li>8 800 700-80-89</li>
+              <li class="contacts_2">8 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
@@ -40,11 +39,11 @@
 
           <div class="nav">
             <ul class="info">
-              <li class="info_1">Каталог</li>
-              <li class="info_2">О компании</li>
-              <li class="info_3">Покупателям</li>
-              <li class="info_4">Поставщикам</li>
-              <li>Контакты</li>
+              <li class="info_1"><a href="#">Каталог</a></li>
+              <li class="info_2"><a href="./aboutUs.html">О компании</a></li>
+              <li class="info_3"><a href="#">Покупателям</a></li>
+              <li class="info_4"><a href="./suppliers.html">Поставщикам</a></li>
+              <li><a href="#">Контакты</a></li>
               <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
               <a href="#"
                 ><img src="./assets/ic_baseline-telegram.svg" alt=""
