--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
           <div class="nav">
             <ul class="info">
-              <li class="info_1">Каталог</li>
-              <li class="info_2">О компании</li>
-              <li class="info_3">Покупателям</li>
-              <li class="info_4">Поставщикам</li>
-              <li>Контакты</li>
+              <li class="info_1"><a href="#">Каталог</a></li>
+              <li class="info_2"><a href="./aboutUs.html">О компании</a></li>
+              <li class="info_3"><a href="#">Покупателям</a></li>
+              <li class="info_4"><a href="./suppliers.html">Поставщикам</a></li>
+              <li><a href="#">Контакты</a></li>
               <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
               <a href="#"
                 ><img src="./assets/ic_baseline-telegram.svg" alt=""
@@ -131,21 +131,29 @@
                     ваше авто непревзойденным.
                   </p>
                 </div>
-                <img
-                  class="slider_img1"
-                  src="./assets/img/SliderBack.png"
-                  alt=""
-                />
-                <img
-                  class="slider_img2"
-                  src="./assets/img/SliderPic.png"
-                  alt=""
-                />
-                <img
-                  class="slider_img3"
-                  src="./assets/img/SliderCar.png"
-                  alt=""
-                />
+                <div class="slider_banner-car-desktop">
+                  <img
+                    class="slider_img1"
+                    src="./assets/img/SliderBack.png"
+                    alt=""
+                  />
+                  <img
+                    class="slider_img2"
+                    src="./assets/img/SliderPic.png"
+                    alt=""
+                  />
+                  <img
+                    class="slider_img3"
+                    src="./assets/img/SliderCar.png"
+                    alt=""
+                  />
+                </div>
+
+                <!-- <div class="slider_banner-car-mob">
+                  <img src="./assets/img/car-mob-back.png" alt="" />
+                  <button class="slider_btn butn">Читать</button>
+                </div> -->
+
                 <button class="slider_btn butn">Читать</button>
               </div>
             </div>
@@ -157,17 +165,31 @@
                   alt=""
                 />
 
-                <img
-                  src="./assets/img/banner-text-group.png"
-                  alt=""
-                  class="banner_img2"
-                />
+                <img class="ztd-icon" src="./assets/img/ztd-icon.png" alt="" />
 
                 <img
                   src="./assets/img/pedal_banner.png"
                   alt=""
                   class="banner_img3"
                 />
+
+                <img
+                  src="./assets/img/banner-text-group.png"
+                  alt=""
+                  class="banner_img2"
+                />
+
+                <!-- мобильный текст -->
+                <img
+                  class="banner_img2-mob"
+                  src="./assets/img/banner-text-mobile.png"
+                  alt=""
+                />
+                <!-- мобильный текст -->
+
+                <!-- <img src="./assets/img/banner-text-mobile.png" alt="" /> -->
+
+                <img src="" alt="" />
                 <button class="slider_btn butn">Смотреть</button>
               </div>
             </div>
@@ -176,15 +198,6 @@
                 <img
                   class="slide"
                   src="./assets/img/wallpaperflare.com_wallpaper (14).jpg"
-                  alt=""
-                />
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="slider_background">
-                <img
-                  class="slide"
-                  src="./assets/img/wallpaperflare.com_wallpaper (15).jpg"
                   alt=""
                 />
               </div>
@@ -235,7 +248,7 @@
                   <img src="./assets/img/products/categories/cars.png" alt="" />
                 </div>
 
-                <h6>Для легковых авто</h6>
+                <h6>Для легковых</h6>
               </div>
               <div class="category_card swiper-slide">
                 <div class="img_category_container">
@@ -672,7 +685,7 @@
                 <div class="footer_email">
                   <h5>Электронная почта</h5>
                   <ul>
-                    <li>info@mig-auto.ru</li>
+                    <li>ainfo@mig-auto.ru</li>
                   </ul>
                 </div>
                 <div class="footer_pay">
