--- a/aboutUs.html
+++ b/aboutUs.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./Lib/swiper8/swiper-bundle.min.css" />
@@ -10,7 +11,7 @@
     <title>О нас</title>
   </head>
   <body>
-    <div class="about_us_wrapper">
+    <div class="wrapper">
       <div class="burger">
         <div class="header_container">
           <div class="nav">
@@ -38,14 +39,14 @@
 
           <div class="nav">
             <ul class="info">
-              <li class="info_1">Каталог</li>
-              <li class="info_2">О компании</li>
-              <li class="info_3">Покупателям</li>
-              <li class="info_4">Поставщикам</li>
-              <li>Контакты</li>
-              <a href="#"><img src="/assets/ri_whatsapp-fill.svg" alt="" /></a>
+              <li class="info_1"><a href="#">Каталог</a></li>
+              <li class="info_2"><a href="./aboutUs.html">О компании</a></li>
+              <li class="info_3"><a href="#">Покупателям</a></li>
+              <li class="info_4"><a href="./suppliers.html">Поставщикам</a></li>
+              <li><a href="#">Контакты</a></li>
+              <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
               <a href="#"
-                ><img src="/assets/tabler_mail-filled.svg" alt=""
+                ><img src="./assets/ic_baseline-telegram.svg" alt=""
               /></a>
             </ul>
             <ul class="contacts">
