--- a/otk.html
+++ b/otk.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./Lib/swiper8/swiper-bundle.min.css" />
     <script defer src="./main.js"></script>
-    <title>OTK</title>
+    <title>ОТК</title>
   </head>
   <body>
     <div class="wrapper">
@@ -39,11 +39,11 @@
 
           <div class="nav">
             <ul class="info">
-              <li class="info_1">Каталог</li>
-              <li class="info_2">О компании</li>
-              <li class="info_3">Покупателям</li>
-              <li class="info_4">Поставщикам</li>
-              <li>Контакты</li>
+              <li class="info_1"><a href="#">Каталог</a></li>
+              <li class="info_2"><a href="./aboutUs.html">О компании</a></li>
+              <li class="info_3"><a href="#">Покупателям</a></li>
+              <li class="info_4"><a href="./suppliers.html">Поставщикам</a></li>
+              <li><a href="#">Контакты</a></li>
               <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
               <a href="#"
                 ><img src="./assets/ic_baseline-telegram.svg" alt=""
@@ -121,7 +121,7 @@
           <img src="./assets/img/otk-pic.png" alt="" />
           <div class="otk_text">
             <h1 class="title">ОТК</h1>
-            <div class="otk_text_section">
+            <div class="otk_text_section_1">
               <h5>
                 <img src="./assets/img/Ellipse-otk.png" alt="" />
                 На приёмку товара покупателям дается 10 дней с момента
