--- a/partners.html
+++ b/partners.html
@@ -39,11 +39,11 @@
 
           <div class="nav">
             <ul class="info">
-              <li class="info_1">Каталог</li>
-              <li class="info_2">О компании</li>
-              <li class="info_3">Покупателям</li>
-              <li class="info_4">Поставщикам</li>
-              <li>Контакты</li>
+              <li class="info_1"><a href="#">Каталог</a></li>
+              <li class="info_2"><a href="./aboutUs.html">О компании</a></li>
+              <li class="info_3"><a href="#">Покупателям</a></li>
+              <li class="info_4"><a href="./suppliers.html">Поставщикам</a></li>
+              <li><a href="#">Контакты</a></li>
               <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
               <a href="#"
                 ><img src="./assets/ic_baseline-telegram.svg" alt=""
@@ -140,18 +140,7 @@
               деятельности – Производство и оптовая торговля резинотехническими
               изделиями и запчастями к автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ,
               ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим маркам отечественного и
-              зарубежного производства. Основной вид деятельности – Производство
-              и оптовая торговля резинотехническими изделиями и запчастями к
-              автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ,
-              УАЗ, КРАЗ и другим маркам отечественного и зарубежного
-              производства.Основной вид деятельности – Производство и оптовая
-              торговля резинотехническими изделиями и запчастями к автомобилям
-              марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и
-              другим маркам отечественного и зарубежного производства.Основной
-              вид деятельности – Производство и оптовая торговля
-              резинотехническими изделиями и запчастями к автомобилям марок ПАО
-              «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим
-              маркам отечественного и зарубежного производства.
+              зарубежного производства.
             </p>
             <a class="about-btn" href="#">Перейти к сайту</a>
           </div>
@@ -166,18 +155,7 @@
               деятельности – Производство и оптовая торговля резинотехническими
               изделиями и запчастями к автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ,
               ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим маркам отечественного и
-              зарубежного производства. Основной вид деятельности – Производство
-              и оптовая торговля резинотехническими изделиями и запчастями к
-              автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ,
-              УАЗ, КРАЗ и другим маркам отечественного и зарубежного
-              производства.Основной вид деятельности – Производство и оптовая
-              торговля резинотехническими изделиями и запчастями к автомобилям
-              марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и
-              другим маркам отечественного и зарубежного производства.Основной
-              вид деятельности – Производство и оптовая торговля
-              резинотехническими изделиями и запчастями к автомобилям марок ПАО
-              «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим
-              маркам отечественного и зарубежного производства.
+              зарубежного производства.
             </p>
             <a class="about-btn" href="#">Перейти к сайту</a>
           </div>
@@ -192,18 +170,7 @@
               деятельности – Производство и оптовая торговля резинотехническими
               изделиями и запчастями к автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ,
               ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим маркам отечественного и
-              зарубежного производства. Основной вид деятельности – Производство
-              и оптовая торговля резинотехническими изделиями и запчастями к
-              автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ,
-              УАЗ, КРАЗ и другим маркам отечественного и зарубежного
-              производства.Основной вид деятельности – Производство и оптовая
-              торговля резинотехническими изделиями и запчастями к автомобилям
-              марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и
-              другим маркам отечественного и зарубежного производства.Основной
-              вид деятельности – Производство и оптовая торговля
-              резинотехническими изделиями и запчастями к автомобилям марок ПАО
-              «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим
-              маркам отечественного и зарубежного производства.
+              зарубежного производства.
             </p>
             <a class="about-btn" href="#">Перейти к сайту</a>
           </div>
@@ -218,18 +185,7 @@
               деятельности – Производство и оптовая торговля резинотехническими
               изделиями и запчастями к автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ,
               ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим маркам отечественного и
-              зарубежного производства. Основной вид деятельности – Производство
-              и оптовая торговля резинотехническими изделиями и запчастями к
-              автомобилям марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ,
-              УАЗ, КРАЗ и другим маркам отечественного и зарубежного
-              производства.Основной вид деятельности – Производство и оптовая
-              торговля резинотехническими изделиями и запчастями к автомобилям
-              марок ПАО «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и
-              другим маркам отечественного и зарубежного производства.Основной
-              вид деятельности – Производство и оптовая торговля
-              резинотехническими изделиями и запчастями к автомобилям марок ПАО
-              «КАМАЗ», МАЗ, ЗИЛ, ГАЗель, ГАЗ, ВАЗ, УРАЛ, УАЗ, КРАЗ и другим
-              маркам отечественного и зарубежного производства.
+              зарубежного производства.
             </p>
             <a class="about-btn" href="#">Перейти к сайту</a>
           </div>
