--- a/suppliers.html
+++ b/suppliers.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
     <link rel="stylesheet" href="./Lib/swiper8/swiper-bundle.min.css" />
     <script defer src="./main.js"></script>
-    <title>Поставщикам</title>
+    <title>Поставщики</title>
   </head>
   <body>
-    <div class="suppliers_wrapper">
+    <div class="wrapper">
       <div class="burger">
         <div class="header_container">
           <div class="nav">
@@ -25,8 +26,8 @@
               </button>
             </ul>
             <ul class="contacts">
-              <li>+7 800 700-80-89</li>
-              <li class="contacts_2">+7 8552 39-35-06</li>
+              <li>8 800 700-80-89</li>
+              <li class="contacts_2">8 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
@@ -38,19 +39,19 @@
 
           <div class="nav">
             <ul class="info">
-              <li class="info_1">Каталог</li>
-              <li class="info_2">О компании</li>
-              <li class="info_3">Покупателям</li>
-              <li class="info_4">Поставщикам</li>
-              <li>Контакты</li>
-              <a href="#"><img src="/assets/ri_whatsapp-fill.svg" alt="" /></a>
+              <li class="info_1"><a href="#">Каталог</a></li>
+              <li class="info_2"><a href="./aboutUs.html">О компании</a></li>
+              <li class="info_3"><a href="#">Покупателям</a></li>
+              <li class="info_4"><a href="./suppliers.html">Поставщикам</a></li>
+              <li><a href="#">Контакты</a></li>
+              <a href="#"><img src="./assets/ri_whatsapp-fill.svg" alt="" /></a>
               <a href="#"
-                ><img src="/assets/tabler_mail-filled.svg" alt=""
+                ><img src="./assets/ic_baseline-telegram.svg" alt=""
               /></a>
             </ul>
             <ul class="contacts">
-              <li>8 800 700-80-89</li>
-              <li class="contacts_2">8 8552 39-35-06</li>
+              <li>+7 800 700-80-89</li>
+              <li class="contacts_2">+7 8552 39-35-06</li>
               <li class="contacts_3">info@mig-auto.ru</li>
             </ul>
           </div>
