--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         <!-- преимущества -->
         <h1 class="advantage_title title">Наши преимущества</h1>
         <div class="advantages">
-          <div class="tiles">
+          <div class="tiles_mob">
             <div class="tiles_row_1">
               <div class="tile_4 tile">
                 <div>
@@ -457,6 +457,69 @@
               </div>
             </div> -->
           </div>
+
+          <div class="tiles">
+            <div class="tiles_row_1">
+
+              <div class="tile_1 tile">
+                <div>
+                  <h1>C 1998 года</h1>
+                  <p>Поставляем запчасти для грузовых авто</p>
+                </div>
+              </div>
+              <!-- <div class="tile_4 tile">
+                <div>
+                  <h1>Стабильно <span>низкие</span> цены</h1>
+                  <p>при высоком качестве</p>
+                </div>
+              </div> -->
+
+              <!-- <div class="tile_2 tile">
+                <div>
+                  <h1>Быстрая доставка</h1>
+                  <p>за счет больших объемов складских запасов</p>
+                </div>
+              </div> -->
+
+              <div class="tile_2 tile">
+                <div>
+                  <h1>Быстрая доставка</h1>
+                  <p>за счет больших объемов</p>
+                </div>
+              </div>
+            </div>
+            <div class="tiles_row_2">
+              <!-- <div class="tile_1 tile">
+                <div>
+                  <h1>C 1998 года</h1>
+                  <p>Поставляем запчасти для грузовых авто</p>
+                </div>
+              </div> -->
+
+              <!-- <div class="tile_3 tile">
+                <div>
+                  <h1>Оригинальные запчасти</h1>
+                </div>
+              </div> -->
+            </div>
+
+            <div class="tiles_row_2">
+              <div class="tile_3 tile">
+                <div>
+                  <h1>Оригинальные запчасти</h1>
+                </div>
+              </div>
+
+              <div class="tile_4 tile">
+                <div>
+                  <h1>Стабильно <span>низкие</span> цены</h1>
+                  <p>при высоком качестве</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          
         </div>
         <!-- преимущества -->
 
