--- a/aboutUs.html
+++ b/aboutUs.html
@@ -522,6 +522,16 @@
           <div class="icon_container">
             <img
               class="star_img"
+              src="./assets/list-dot-black.svg"
+              alt=""
+            />
+            <div>
+              <p>Каталог</p>
+            </div>
+          </div>
+          <div class="icon_container">
+            <img
+              class="star_img"
               src="./assets/solar_star-line-duotone.svg"
               alt=""
             />
