--- a/index.html
+++ b/index.html
@@ -806,7 +806,19 @@
 
       <div class="navbar_mobile">
         <div class="nav_icons_mobile">
+
           <div class="icon_container">
+            <img
+              class="star_img"
+              src="./assets/list-dot-black.svg"
+              alt=""
+            />
+            <div>
+              <p>Каталог</p>
+            </div>
+          </div>
+
+          <div class="icon_container_middle">
             <img
               class="star_img"
               src="./assets/solar_star-line-duotone.svg"
