--- a/aboutUs.html
+++ b/aboutUs.html
@@ -340,7 +340,7 @@
               <a href="#">Подпись сертификата</a>
             </div>
             <div class="cert_card_item">
-              <div class="cert_card">Сертификат</div>
+              <div class="cert_card">Сертифи  кат</div>
               <a href="#">Подпись сертификата</a>
             </div>
           </div>
@@ -356,7 +356,7 @@
           </button>
         </div>
 
-        <div class="subscribe">
+        <div class="subscribers">
           <img src="./assets/img/starSub.png" alt="" />
           <div class="subscribe_title">
             <h1 class="title">
@@ -512,7 +512,7 @@
               <li>Запчасти ЗИЛ</li>
               <li>Запчасти КамАЗ</li>
             </ul>
-          </div> -->
+          </div> --> 
           </div>
         </div>
       </div>
@@ -581,19 +581,20 @@
           </div>
           <div class="section_products_mobile">
             <ul>
-              <li>Запчасти МАЗ, КРАЗ</li>
-              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
-              <li>Запчасти MADARA</li>
-              <li>Запчасти для легковых автомобилей</li>
-              <li>Запчасти ЗИЛ</li>
-              <li>Запчасти Трактор</li>
-              <li>Запчасти УРАЛ</li>
-              <li>Ремни</li>
+              <li>Запчасти ZTD</li>
+              <li>Автохимия</li>
               <li>Запчасти CUMMINS</li>
               <li>Запчасти MADARA</li>
+              <li>Запчасти для иномарок</li>
               <li>Запчасти для легковых автомобилей</li>
               <li>Запчасти ЗИЛ</li>
               <li>Запчасти КамАЗ</li>
+              <li>Запчасти МАЗ, КРАЗ</li>
+              <li>Запчасти на прицеп и полуприцеп</li>
+              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
+              <li>Запчасти Трактор</li>
+              <li>Запчасти УРАЛ</li>
+              <li>Ремни</li>
             </ul>
           </div>
         </div>
@@ -607,7 +608,7 @@
           <div class="footer_phone">
             <h5>Телефон</h5>
             <ul>
-              <li>+700 700-80-89</li>
+              <li>+7 800 700-80-89</li>
               <li>+7 8552 39-35-06</li>
             </ul>
           </div>
