--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
           <div class="tiles_mob">
             <div class="tiles_row_1">
               <div class="tile_4 tile">
+                <img src="./assets/img/icon_4_tile.png" alt="">
                 <div>
                   <h1>Стабильно <span>низкие</span> цены</h1>
                   <p>при высоком качестве</p>
@@ -414,6 +415,7 @@
               </div>
 
               <div class="tile_2 tile">
+                <img src="./assets/img/icon_2_tile.png" alt="">
                 <div>
                   <h1>Быстрая доставка</h1>
                   <p>за счет больших объемов складских запасов</p>
@@ -429,6 +431,8 @@
             </div>
             <div class="tiles_row_2">
               <div class="tile_1 tile">
+                <img class="truck" src="./assets/img/products/advantages/truck.png" alt="">
+                <img class="icon_tile" src="./assets/img/icon_1_tile.png" alt="">
                 <div>
                   <h1>C 1998 года</h1>
                   <p>Поставляем запчасти для грузовых авто</p>
@@ -436,6 +440,8 @@
               </div>
 
               <div class="tile_3 tile">
+                <img class="icon_tile" src="./assets/img/icon_3_tile.png" alt="">
+                <img class="turbine" src="./assets/img/products/advantages/turbine.png" alt="">
                 <div>
                   <h1>Оригинальные запчасти</h1>
                 </div>
@@ -462,6 +468,8 @@
             <div class="tiles_row_1">
 
               <div class="tile_1 tile">
+                <img class="truck" src="./assets/img/products/advantages/truck.png" alt="">
+                <img class="icon_tile" src="./assets/img/icon_1_tile.png" alt="">
                 <div>
                   <h1>C 1998 года</h1>
                   <p>Поставляем запчасти для грузовых авто</p>
@@ -482,6 +490,7 @@
               </div> -->
 
               <div class="tile_2 tile">
+                <img src="./assets/img/icon_2_tile.png" alt="">
                 <div>
                   <h1>Быстрая доставка</h1>
                   <p>за счет больших объемов</p>
@@ -505,12 +514,14 @@
 
             <div class="tiles_row_2">
               <div class="tile_3 tile">
+                <img class="icon_tile" src="./assets/img/icon_3_tile.png" alt="">
                 <div>
                   <h1>Оригинальные запчасти</h1>
                 </div>
               </div>
 
               <div class="tile_4 tile">
+                <img src="./assets/img/icon_4_tile.png" alt="">
                 <div>
                   <h1>Стабильно <span>низкие</span> цены</h1>
                   <p>при высоком качестве</p>
@@ -870,19 +881,20 @@
           </div>
           <div class="section_products_mobile">
             <ul>
-              <li>Запчасти МАЗ, КРАЗ</li>
-              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
-              <li>Запчасти MADARA</li>
-              <li>Запчасти для легковых автомобилей</li>
-              <li>Запчасти ЗИЛ</li>
-              <li>Запчасти Трактор</li>
-              <li>Запчасти УРАЛ</li>
-              <li>Ремни</li>
+              <li>Запчасти ZTD</li>
+              <li>Автохимия</li>
               <li>Запчасти CUMMINS</li>
               <li>Запчасти MADARA</li>
+              <li>Запчасти для иномарок</li>
               <li>Запчасти для легковых автомобилей</li>
               <li>Запчасти ЗИЛ</li>
               <li>Запчасти КамАЗ</li>
+              <li>Запчасти МАЗ, КРАЗ</li>
+              <li>Запчасти на прицеп и полуприцеп</li>
+              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
+              <li>Запчасти Трактор</li>
+              <li>Запчасти УРАЛ</li>
+              <li>Ремни</li>
             </ul>
           </div>
         </div>
@@ -896,7 +908,7 @@
           <div class="footer_phone">
             <h5>Телефон</h5>
             <ul>
-              <li>+700 700-80-89</li>
+              <li>+7 800 700-80-89</li>
               <li>+7 8552 39-35-06</li>
             </ul>
           </div>
