--- a/contacts.html
+++ b/contacts.html
@@ -429,19 +429,20 @@
           </div>
           <div class="section_products_mobile">
             <ul>
-              <li>Запчасти МАЗ, КРАЗ</li>
-              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
-              <li>Запчасти MADARA</li>
-              <li>Запчасти для легковых автомобилей</li>
-              <li>Запчасти ЗИЛ</li>
-              <li>Запчасти Трактор</li>
-              <li>Запчасти УРАЛ</li>
-              <li>Ремни</li>
+              <li>Запчасти ZTD</li>
+              <li>Автохимия</li>
               <li>Запчасти CUMMINS</li>
               <li>Запчасти MADARA</li>
+              <li>Запчасти для иномарок</li>
               <li>Запчасти для легковых автомобилей</li>
               <li>Запчасти ЗИЛ</li>
               <li>Запчасти КамАЗ</li>
+              <li>Запчасти МАЗ, КРАЗ</li>
+              <li>Запчасти на прицеп и полуприцеп</li>
+              <li>Запчасти НЕФАЗ, ЛИАЗ</li>
+              <li>Запчасти Трактор</li>
+              <li>Запчасти УРАЛ</li>
+              <li>Ремни</li>
             </ul>
           </div>
         </div>
@@ -455,7 +456,7 @@
           <div class="footer_phone">
             <h5>Телефон</h5>
             <ul>
-              <li>+700 700-80-89</li>
+              <li>+7 800 700-80-89</li>
               <li>+7 8552 39-35-06</li>
             </ul>
           </div>
